fix: moved multi-select option to bottom & z-index fixes

--- a/frontend/src/app/common/sub-section-menu/sub-section-menu.component.css
+++ b/frontend/src/app/common/sub-section-menu/sub-section-menu.component.css
@@ -5,7 +5,7 @@
   position: fixed;
   top: 67px;
   width: 100%;
-  z-index: 5;
+  z-index: 9999;
 }
 
 ul {
